# tree-sitter-alloy

./: CMakeLists.txt  Cargo.toml  Makefile  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_alloy/: __init__.py
bindings/rust/: lib.rs
bindings/swift/TreeSitterAlloyTests/: TreeSitterAlloyTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
